Work on qunit testing

--- a/Templates/JAR3Doutput/homepage.html
+++ b/Templates/JAR3Doutput/homepage.html
@@ -15,7 +15,6 @@
       }
     </style>
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-
   </head>
 
   <body>
@@ -49,6 +48,11 @@
 
     </div> <!-- /container -->
 
+
+    <script>
+
+
+    </script>
 
   </body>
 </html>
