Work on loop extraction

--- a/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
+++ b/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
@@ -42,3 +42,6 @@ footer {
 .homepage .alert-success, .homepage .alert-error {
     margin-bottom: 0;
 }
+.homepage #message {
+    display: none;
+}
