--- a/Templates/JAR3Doutput/base.html
+++ b/Templates/JAR3Doutput/base.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">JAR3D</a>
+          <a class="brand" href="{% url JAR3Dresults.views.home %}">JAR3D</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
