--- a/Templates/JAR3Doutput/base_result_pending.html
+++ b/Templates/JAR3Doutput/base_result_pending.html
@@ -5,13 +5,30 @@
 {% block page_specific_css_class %}results-done{% endblock page_specific_css_class %}
 
 {% block page_header %}Pending{% endblock page_header %}
-{% block page_subtitle %} {{query_id}} {% endblock page_subtitle %}
+{% block page_subtitle %} {{query_info.query_id}} {% endblock page_subtitle %}
 
 {% block page_content %}
 
-Results
+<button id='refine' class='btn btn-primary' data-id="{{query_info.query_id}}">Refine query</button>
 
-<button id='refine' class='btn btn-primary' data-id="{{query_id}}">Refine query</button>
+<h4>Query interpretation</h4>
+<dl>
+    <dt>Query type</dt>
+    <dd>{{query_info.query_type}}</dd>
+
+    <dt>Number of sequences</dt>
+    <dd>{{num.seq}}</dd>
+
+    <dt>Number of loops</dt>
+    <dd>{{num.loops}}</dd>
+
+    <dt>Total number of loop instances</dt>
+    <dd>{{num.loop_instances}}</dd>
+
+    <dt>Parsed input</dt>
+    <dd>{{query_info.parsed_input|linebreaks}}</dd>
+</dl>
+
 
 {% endblock page_content %}
 
