Tweaks in homepage

--- a/Templates/JAR3Doutput/base_homepage.html
+++ b/Templates/JAR3Doutput/base_homepage.html
@@ -11,8 +11,7 @@
     <div class="row">
         <div class="span8">
             <textarea id='input' class="span8" rows='10' tabindex="1"
-            placeholder="Single or aligned RNA/DNA sequences or single/multiple loops
-            (fasta-formatted descriptions and secondary structures are optional)">{{input|default:''}}</textarea>
+            placeholder="Single or aligned RNA/DNA sequences or single/multiple loops (fasta-formatted descriptions and secondary structures are optional)">{{input|default:''}}</textarea>
         </div>
         <div class="span2">
             <h4>Examples</h4>
