--- a/Templates/JAR3Doutput/base_homepage.html
+++ b/Templates/JAR3Doutput/base_homepage.html
@@ -4,7 +4,7 @@
 
 {% block page_specific_css_class %}homepage{% endblock page_specific_css_class %}
 
-{% block page_header %}Java-based Alignment of RNA 3D Structure{% endblock page_header %}
+{% block page_header %}JAR3D{% endblock page_header %}
 {% block page_subtitle %}predicting RNA 3D motifs in sequences{% endblock page_subtitle %}
 
 {% block page_content %}
