--- a/Templates/JAR3Doutput/base.html
+++ b/Templates/JAR3Doutput/base.html
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
           </a>
 
-          <a class="brand" href="http://rna.bgsu.edu/main/" title="BGSU RNA Bioinformatics Lab" rel="homepage">BGSU RNA Bioinformatics Lab</a>
+                                        <a class="brand" href="http://rna.bgsu.edu/main/" title="BGSU RNA Bioinformatics Lab" rel="homepage">BGSU RNA Bioinformatics Lab</a>
 
 
 
@@ -43,10 +43,12 @@
 <li id="menu-item-98" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-98"><a href="http://rna.bgsu.edu/main/webapps/"  class="dropdown-toggle" data-toggle="dropdown">Web Applications <b class="caret"></b></a>
 <ul class="dropdown-menu">
 	<li id="menu-item-103" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-103"><a href="http://rna.bgsu.edu/main/webapps/webfr3d/" >WebFR3D</a></li>
-	<li id="menu-item-377" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-377"><a href="http://rna.bgsu.edu/webfr3d/geometric.php" ><i class="icon-share-alt"></i> Geometric WebFR3D</a></li>
-	<li id="menu-item-378" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-378"><a href="http://rna.bgsu.edu/webfr3d/symbolic.php" ><i class="icon-share-alt"></i> Symbolic WebFR3D</a></li>
+	<li id="menu-item-377" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-377"><a href="http://rna.bgsu.edu/webfr3d/geometric.php" >    Geometric WebFR3D server</a></li>
+	<li id="menu-item-378" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-378"><a href="http://rna.bgsu.edu/webfr3d/symbolic.php" >    Symbolic WebFR3D server</a></li>
 	<li id="menu-item-101" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-101"><a href="http://rna.bgsu.edu/main/webapps/jar3d/" >JAR3D</a></li>
+	<li id="menu-item-537" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-537"><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;JAR3D server</a></li>
 	<li id="menu-item-102" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-102"><a href="http://rna.bgsu.edu/main/webapps/webr3dalign/" >WebR3DAlign</a></li>
+	<li id="menu-item-538" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-538"><a href="http://rna.bgsu.edu/r3dalign" >&nbsp;&nbsp;&nbsp;&nbsp;WebR3DAlign server</a></li>
 </ul>
 </li>
 <li id="menu-item-99" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-99"><a href="http://rna.bgsu.edu/main/databases/"  class="dropdown-toggle" data-toggle="dropdown">Databases <b class="caret"></b></a>
