Work on displaying results

--- a/Templates/JAR3Doutput/base.html
+++ b/Templates/JAR3Doutput/base.html
@@ -47,7 +47,7 @@
     </div> <!-- /container -->
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="//rna.bgsu.edu/img/jar3d/js/bootstrap-dropdown.js"></script>
+    <script src="{{ STATIC_URL }}js/bootstrap-dropdown.js"></script>
 
     {% block page_specific_js %}{% endblock page_specific_js %}
 
