--- a/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
+++ b/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
@@ -87,3 +87,22 @@ table .headerSortUp:after {
 .monospace {
     font-family: monospace;
 }
+
+/* results page */
+.results-done label input {
+    display:inline;
+    margin-right: 5px;
+}
+.results-done .hover-link-icon {
+    display:none;
+}
+.results-done .hover-link:hover .hover-link-icon {
+    margin-left: 3px;
+    display: inline;
+}
+.results-done td:nth-of-type(2) {
+    width:120px;
+}
+.results-done label {
+    display:inline;
+}
