--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -1,5 +1,11 @@
 {% extends "JAR3Doutput/base_result.html" %}
 
+{% block page_specific_css_class %}results-done{% endblock page_specific_css_class %}
+
+{% block custom_css %}
+<script src="http://rna.bgsu.edu/img/jmol/jmol.js"></script>
+{% endblock custom_css %}
+
 {% block page_subtitle %}
   {{ block.super }}
   Query {{ query_info.query_id }} completed
@@ -10,9 +16,9 @@
 
 <div class="row">
 {% for loop in loops %}
-    <div class="well span7">
+    <div class="span7">
     <strong>Loop {{ forloop.counter }}</strong>
-    <table class="table table-condensed">
+    <table class="table table-striped table-condensed table-bordered">
       <thead>
         <tr>
           <th>#</th>
@@ -30,7 +36,14 @@
       {% for result in loop %}
       <tr>
         <td>{{ forloop.counter }}</td>
-        <td><a href="{{ result.motif_url }}" target="_blank">{{ result.motif_id }}</a></td>
+        <td class="hover-link">
+          <input type='radio' name="group" id='s{{ forloop.counter }}'
+                 class='jmolInline' data-coord='{{ result.motif_id }}'>
+          <label for='s{{ forloop.counter }}'>{{ result.motif_id }}</label>
+          <span class="hover-link-icon">
+            <a href="{{ result.motif_url }}" target="_blank">&rarr;</a>
+          </span>
+        </td>
         <td>{{ result.meanscore|floatformat:4 }}</td>
         <td>{{ result.medianscore|floatformat:4 }}</td>
         <td>{{ result.meanpercentile|floatformat:2 }}</td>
@@ -44,6 +57,20 @@
     </table>
     </div>
 {% endfor %}
+
+    <div class="span4">
+        <script type="text/javascript">
+            jmolInitialize(" http://rna.bgsu.edu/img/jmol");
+            jmolSetAppletColor("#ffffff");
+            jmolApplet(340, "javascript appletLoaded()");
+        </script>
+        <input type='button' id='neighborhood' class='btn' value="Show neighborhood">
+        <input type='button' id='stereo' class='btn' value="Show stereo">
+        <input type='button' id='prev' class='btn' value='Previous'>
+        <input type='button' id='next' class='btn' value="Next">
+        <label><input type="checkbox" id="showNtNums">Numbers</label>
+    </div>
+
 </div>
 
 {{ block.super }}
@@ -53,9 +80,23 @@
 {% block page_specific_js %}
     {{ block.super }}
     <script src="{{ STATIC_URL }}js/jquery.tablesorter.min.js"></script>
+    <script src="http://rna.bgsu.edu/img/jmolTools/jquery.jmolTools.js"></script>
     <script>
     $(document).ready(function() {
         $("table").tablesorter();
     });
+    // initialize jmolTools
+    $('.jmolInline').jmolTools({
+        showStereoId: 'stereo',
+        showNeighborhoodId: 'neighborhood',
+        showNumbersId: 'showNtNums',
+        showNextId: 'next',
+        showPrevId: 'prev'
+    });
+
+    // make sure that jmol is ready
+    function appletLoaded (){
+        $('.jmolInline').first().jmolToggle();
+    }
     </script>
 {% endblock page_specific_js %}
