--- a/Templates/JAR3Doutput/sitewide_menu.html
+++ b/Templates/JAR3Doutput/sitewide_menu.html
@@ -1,4 +1,3 @@
-    {# copied as-is from source code produced by the strappress wordpress theme for the main website #}
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -26,7 +25,7 @@
 	<li id="menu-item-377" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-377"><a href="http://rna.bgsu.edu/webfr3d/geometric.php" >&nbsp;&nbsp;&nbsp;&nbsp;Geometric WebFR3D server</a></li>
 	<li id="menu-item-378" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-378"><a href="http://rna.bgsu.edu/webfr3d/symbolic.php" >&nbsp;&nbsp;&nbsp;&nbsp;Symbolic WebFR3D server</a></li>
 	<li id="menu-item-101" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-101"><a href="http://rna.bgsu.edu/main/webapps/jar3d/" >JAR3D</a></li>
-	<li id="menu-item-537" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-537"><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;JAR3D server</a></li>
+	<li id="menu-item-537" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-537"><a href="/jar3d">&nbsp;&nbsp;&nbsp;&nbsp;JAR3D server</a></li>
 	<li id="menu-item-102" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-102"><a href="http://rna.bgsu.edu/main/webapps/webr3dalign/" >WebR3DAlign</a></li>
 	<li id="menu-item-538" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-538"><a href="http://rna.bgsu.edu/r3dalign" >&nbsp;&nbsp;&nbsp;&nbsp;WebR3DAlign server</a></li>
 </ul>
@@ -34,14 +33,16 @@
 <li id="menu-item-99" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-99"><a href="http://rna.bgsu.edu/main/databases/"  class="dropdown-toggle" data-toggle="dropdown">Databases <b class="caret"></b></a>
 <ul class="dropdown-menu">
 	<li id="menu-item-484" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-484"><a href="http://rna.bgsu.edu/rna3dhub" >RNA 3D Hub</a></li>
-	<li id="menu-item-485" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-485"><a href="http://rna.bgsu.edu/rna3dhub/motifs" ><i class="icon-share-alt"></i>RNA 3D Motif Atlas</a></li>
-	<li id="menu-item-119" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-119"><a href="http://rna.bgsu.edu/main/databases/nrlist/" >Non-redundant Lists</a></li>
+	<li id="menu-item-485" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-485"><a href="http://rna.bgsu.edu/rna3dhub/motifs" >&nbsp;&nbsp;&nbsp;&nbsp;RNA 3D Motif Atlas</a></li>
+	<li id="menu-item-566" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-566"><a href="http://rna.bgsu.edu/rna3dhub/nrlist" >&nbsp;&nbsp;&nbsp;&nbsp;Non-redundant lists</a></li>
+	<li id="menu-item-567" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-567"><a href="http://rna.bgsu.edu/rna3dhub/loops" >&nbsp;&nbsp;&nbsp;&nbsp;Loop Atlas</a></li>
+	<li id="menu-item-568" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-568"><a href="http://rna.bgsu.edu/FR3D/basepairs/" >RNA Basepair Catalog</a></li>
+	<li id="menu-item-569" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-569"><a href="http://rna.bgsu.edu/FR3D/BasePhosphates/" >RNA Base Phosphate Catalog</a></li>
 	<li id="menu-item-120" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-120"><a href="http://rna.bgsu.edu/main/databases/triples/" >RNA Base Triple Database</a></li>
 </ul>
 </li>
 <li id="menu-item-121" class="menu-item menu-item-type-post_type menu-item-object-page dropdown menu-item-121"><a href="http://rna.bgsu.edu/main/about-us/"  class="dropdown-toggle" data-toggle="dropdown">About Us <b class="caret"></b></a>
 <ul class="dropdown-menu">
-	<li id="menu-item-436" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-436"><a href="http://rna.bgsu.edu/main/about-us/research-projects/" >Research Projects</a></li>
 	<li id="menu-item-96" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-96"><a href="http://rna.bgsu.edu/main/about-us/people/" >People</a></li>
 	<li id="menu-item-95" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-95"><a href="http://rna.bgsu.edu/main/about-us/publications/" >Publications</a></li>
 </ul>
@@ -55,4 +56,3 @@
         </div>
         </div>
      </div>
-
