Only internal loops for now

--- a/Templates/JAR3Doutput/base_homepage.html
+++ b/Templates/JAR3Doutput/base_homepage.html
@@ -87,6 +87,9 @@
               The user can view scoring statistics, visualize representative
               motif instances that potentially match input sequences.
             </p>
+            <div class="alert alert-info">
+              Only internal loops are supported at this time. Please check back soon.
+            </div>
         </div>
         <div class="span4">
             <h3>Method</h3>
