--- a/Templates/JAR3Doutput/base_result_not_found.html
+++ b/Templates/JAR3Doutput/base_result_not_found.html
@@ -1,4 +1,4 @@
-{% extends "JAR3Doutput/base.html" %}
+{% extends "JAR3Doutput/base_result.html" %}
 
 {% block page_subtitle %}
   Query {{ query_id }} not found
