Add share button

--- a/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
+++ b/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
@@ -106,3 +106,7 @@ table .headerSortUp:after {
 .results-done label {
     display:inline;
 }
+.addthis_toolbox {
+    margin-right: 10px;
+    margin-top: 7px;
+}
