--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -4,6 +4,11 @@
 
 {% block page_subtitle %}
   <button id='refine' class='btn btn-primary pull-right' data-id="{{query_info.query_id}}">Refine query</button>
+
+  <span class="addthis_toolbox addthis_default_style pull-right">
+  <a href="http://www.addthis.com/bookmark.php?v=250&amp;username=xa-4d002299773bf696" class="addthis_button_compact">Share</a>
+  <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=xa-4d002299773bf696"></script>
+  </span>
 {% endblock page_subtitle %}
 
 {% block page_content %}
