--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -13,24 +13,25 @@
 
 {% block page_content %}
 
+<div id='query-interpretation'>
+    <h4>Query interpretation</h4>
+    <dl>
+        <dt>Query type</dt>
+        <dd>{{query_info.query_type}}</dd>
 
-<h4>Query interpretation</h4>
-<dl>
-    <dt>Query type</dt>
-    <dd>{{query_info.query_type}}</dd>
+        <dt>Number of sequences</dt>
+        <dd>{{num.seq}}</dd>
 
-    <dt>Number of sequences</dt>
-    <dd>{{num.seq}}</dd>
+        <dt>Number of loops</dt>
+        <dd>{{num.loops}}</dd>
 
-    <dt>Number of loops</dt>
-    <dd>{{num.loops}}</dd>
+        <dt>Total number of loop instances</dt>
+        <dd>{{num.loop_instances}}</dd>
 
-    <dt>Total number of loop instances</dt>
-    <dd>{{num.loop_instances}}</dd>
-
-    <dt>Input</dt>
-    <dd class="monospace">{{query_info.parsed_input|linebreaks}}</dd>
-</dl>
+        <dt>Input</dt>
+        <dd class="monospace">{{query_info.parsed_input|linebreaks}}</dd>
+    </dl>
+</div>
 
 {% endblock page_content %}
 
