--- a/Templates/JAR3Doutput/base_result_pending.html
+++ b/Templates/JAR3Doutput/base_result_pending.html
@@ -7,8 +7,10 @@
 
 {% block page_content %}
 
-  Your query has been successfully added to the queue. You can bookmark this page,
-  the results will be kept on the server indefinitely.
+  Your query has been successfully added to the queue.
+  The page will refresh every 5 seconds until the results become available.
+  You can bookmark this page, and check back later.
+  The results will be kept on the server indefinitely.
   {{ block.super }}
 
 {% endblock page_content %}
@@ -16,6 +18,6 @@
 {% block page_specific_js %}
     {{ block.super }}
     <script>
-        setTimeout("location.reload(true);", 4000);
+        setTimeout("location.reload(true);", 5000);
     </script>
 {% endblock page_specific_js %}
