--- a/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
+++ b/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
@@ -101,7 +101,7 @@ table .headerSortUp:after {
     display: inline;
 }
 .results-done td:nth-of-type(2) {
-    width:120px;
+    width:100px;
 }
 .results-done label {
     display:inline;
@@ -112,4 +112,7 @@ table .headerSortUp:after {
 }
 #query-interpretation {
     margin-top: 1em;
+}
+.ss-thumbnail {
+    width: 100px;
 }
