--- a/Templates/JAR3Doutput/base_result_pending.html
+++ b/Templates/JAR3Doutput/base_result_pending.html
@@ -7,10 +7,12 @@
 
 {% block page_content %}
 
+  <div class="span6">
   Your query has been successfully added to the queue.
   The page will refresh every 5 seconds until the results become available.
   You can bookmark this page, and check back later.
   The results will be kept on the server indefinitely.
+  </div>
   {{ block.super }}
 
 {% endblock page_content %}
